(executable
 (name tabbed_dialog)
 (modes js)
 (modules tabbed_dialog)
 (libraries js_of_ocaml-lwt js_of_ocaml-tyxml yojson base64 cohttp-lwt-jsoo xml-light js_of_ocaml unix js_of_ocaml-ppx lwt)
 (preprocess (pps lwt_ppx js_of_ocaml-ppx))
 )

(rule
 (alias build_js)
 (deps my_program.c)
 (action (progn
   (run sh -c "emcc ../../my_program.c -s WASM=1 -s EXPORTED_FUNCTIONS='[_myFunction,_myFloat,_myAscii,_main]' -o my_program.js")
 ))
 (targets my_program.js my_program.wasm))

(alias
 (name default)
 (deps tabbed_dialog.bc.js my_program.js my_program.wasm))

(env
 (dev
   (flags (:standard -g -w -16 -w -32 -w -52 -w -21 -w -26 -w -27 -w -37 -w -11))
   (js_of_ocaml
    (compilation_mode whole_program)
    (flags --pretty --disable genprim)
   )
 )
)
